fix: add overflow content restriction

--- a/src/modules/project/detail/docPreview/index.css
+++ b/src/modules/project/detail/docPreview/index.css
@@ -3,12 +3,14 @@
   font-size:12px;
   font-weight: 400;
   color: rgba(116,117,118,1);
+  max-width: 100px;
 }
 
 .docPreview-header-lasteditor {
   margin-left: 21px;
   font-size:14px;
   color: rgba(64,64,64,1);
+  max-width: 130px;
 }
 
 .docPreview-header-lasteditor span {
@@ -17,6 +19,7 @@
 
 .docPreview-header-url {
   margin-left: 6px;
+  white-space: nowrap;
 }
 
 .docPreview-header-url span {
@@ -45,6 +48,7 @@
   line-height: 22px;
   margin-left: 27px;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 .docPreview-time {
