--- a/src/static/css/common.css
+++ b/src/static/css/common.css
@@ -286,3 +286,9 @@ input[type="checkbox"]:checked + label::after {
   text-align: center;
   color: rgb(133, 131, 131);
 }
+.overflowHiddenEllipsisTip{
+  max-width: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
